--- a/marcus_test/index.html
+++ b/marcus_test/index.html
@@ -9,6 +9,20 @@
   <body>
     <!-- <script type="module" src="/cube/normal-cube.js"></script> -->
     <!-- <script type="module" src="/cube/xr-cube.js"></script> -->
-    <script type="module" src="/cube/xr-hit-cube.js"></script>
+    <!-- <script type="module" src="/cube/xr-hit-cube.js"></script> -->
+    <!-- <script type="module" src="/model/xr-hit-models.js"></script> -->
+    <script type="module" src="xr-domOverlay.js"></script>
+
+    <div id="overlay-content">
+      <div id="container">
+        <label for="model-select">Choose Model</label>
+        <select id="model-select">
+          <option value="banana">Banana</option>
+          <option value="cup">Cup</option>
+        </select>
+      </div>
+    </div>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Comment style display none for dom overlay to work in style.css file -->
   </body>
 </html>
