--- a/rank.html
+++ b/rank.html
@@ -18,18 +18,57 @@
     <title>Rank</title>
   </head>
   <body>
-    <button type="button" class="btn btn-outline-light">Back</button>
+    <button type="button" class="btn btn-outline-light" style="float: right">
+      Back
+    </button>
     <h1>RANK</h1>
     <div class="container text-center">
       <div class="row">
         <div class="col">1 Minute</div>
+        <div class="row1">
+          <div class="col">
+            <div>No.1:</div>
+            10 cups
+          </div>
+          <div class="col">
+            <div>No.2:</div>
+            9 cups
+          </div>
+          <div class="col">
+            <div>No.3:</div>
+            8 cups
+          </div>
+        </div>
         <div class="col">5 Cups</div>
+        <div class="row1">
+          <div class="col">
+            <div>No.3:</div>
+            1s
+          </div>
+          <div class="col">
+            <div>No.3:</div>
+            2s
+          </div>
+          <div class="col">
+            <div>No.3:</div>
+            3s
+          </div>
+        </div>
         <div class="col">Challenge</div>
-      </div>
-      <div class="row1">
-        <div class="col">1 Minute</div>
-        <div class="col">5 Cups</div>
-        <div class="col">Challenge</div>
+        <div class="row1">
+          <div class="col">
+            <div>No.1:</div>
+            7s
+          </div>
+          <div class="col">
+            <div>No.2:</div>
+            8s
+          </div>
+          <div class="col">
+            <div>No.3:</div>
+            9s
+          </div>
+        </div>
       </div>
     </div>
     <link rel="stylesheet" href="style.css" />
