add back button

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <button class="btn btn-outline-light" style="float: right">Back</button>
+
+    <h1>About</h1>
+    <div>Something about the game</div>
+    <h2>Game mode & rule (How to play)</h2>
+    <div>Mode 1 (1 Minute)</div>
+    <p>.........</p>
+    <div>Mode 2 (5 cup)</div>
+    <p>.........</p>
+    <div>Mode 3 (Challenge)</div>
+    <p>.........</p>
+    <div>Mode 4 (Practive)</div>
+    <p>.........</p>
+    <h3>Presented by:</h3>
+    <div>Tevin / Marcus / Kasey</div>
+    <h4>Special thanks:</h4>
+    <div>Beeno</div>
+    <div>Grace</div>
+    <div>Tecky</div>
+  </body>
 </html>
