--- a/main.html
+++ b/main.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <picture>The cup</picture>
+    <h1>Game mode:</h1>
+    <button>1 Minute</button>
+    <button>5 Cup</button>
+    <button>Challenge</button>
+    <button>Practive</button>
+    <h1><a href="rank.html">Rank</a></h1>
+    <h1><a href="aboutUs.html">About</a></h1>
+  </body>
 </html>
