--- a/rank.html
+++ b/rank.html
@@ -18,7 +18,11 @@
     <title>Rank</title>
   </head>
   <body>
-    <button type="button" class="btn btn-outline-light">Back</button>
+    <a href="main.html"
+      ><button class="btn btn-outline-light" style="float: right">
+        Back
+      </button></a
+    >
     <h1>RANK</h1>
     <div class="container text-center">
       <div class="row">
