main button update

--- a/main.html
+++ b/main.html
@@ -21,11 +21,21 @@
   <body>
     <picture>The cup</picture>
     <h1>Game mode:</h1>
-    <button>1 Minute</button>
-    <button>5 Cup</button>
-    <button>Challenge</button>
-    <button>Practive</button>
-    <h1><a href="rank.html">Rank</a></h1>
-    <h1><a href="aboutUs.html">About</a></h1>
+    <div class="btn-row">
+      <button class="btn btn-outline-light">1 Minute</button>
+      <button class="btn btn-outline-light">5 Cup</button>
+      <button class="btn btn-outline-light">Challenge</button>
+      <button class="btn btn-outline-light">Practive</button>
+    </div>
+    <h1>
+      <a href="rank.html"
+        ><button class="btn btn-outline-light">Rank</button></a
+      >
+    </h1>
+    <h1>
+      <a href="aboutUs.html"
+        ><button class="btn btn-outline-light">About</button></a
+      >
+    </h1>
   </body>
 </html>
