--- a/rank.html
+++ b/rank.html
@@ -15,6 +15,7 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Rank</title>
   </head>
   <body>
@@ -24,55 +25,61 @@
       </button></a
     >
     <h1>RANK</h1>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">1 Minute</div>
-        <div class="row1">
-          <div class="col">
-            <div>No.1:</div>
-            10 cups
-          </div>
-          <div class="col">
-            <div>No.2:</div>
-            9 cups
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            8 cups
-          </div>
-        </div>
-        <div class="col">5 Cups</div>
-        <div class="row1">
-          <div class="col">
-            <div>No.3:</div>
-            1s
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            2s
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            3s
-          </div>
-        </div>
-        <div class="col">Challenge</div>
-        <div class="row1">
-          <div class="col">
-            <div>No.1:</div>
-            7s
-          </div>
-          <div class="col">
-            <div>No.2:</div>
-            8s
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            9s
-          </div>
-        </div>
+    <div
+      class="container text-center"
+      style="display: flex; justify-content: space-evenly"
+    >
+      <div class="table-row">
+        <div>Rank</div>
+        <div>No:1</div>
+        <div>No:2</div>
+        <div>No:3</div>
+        <div>No:4</div>
+        <div>No:5</div>
+        <div>No:6</div>
+        <div>No:7</div>
+        <div>No:8</div>
+        <div>No:9</div>
+        <div>No:10</div>
       </div>
+      <div class="table-row">
+        <div>1 Minute</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+      </div>
+      <div class="table-row">
+      <div>5 Cup</div>
+      <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+      </div>
+      <div class="table-row" >
+      <div>Challenge</div>
+      <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
     </div>
-    <link rel="stylesheet" href="style.css" />
   </body>
 </html>
