--- a/rank.html
+++ b/rank.html
@@ -4,18 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
     <title>Rank</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a href="main.html"
@@ -24,55 +14,60 @@
       </button></a
     >
     <h1>RANK</h1>
-    <div class="container text-center">
+
+    <div class="container">
       <div class="row">
-        <div class="col">1 Minute</div>
-        <div class="row1">
-          <div class="col">
-            <div>No.1:</div>
-            10 cups
-          </div>
-          <div class="col">
-            <div>No.2:</div>
-            9 cups
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            8 cups
+        <div class="col">
+          <h2>No.</h2>
+          <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">4</div>
+            <div class="col">5</div>
           </div>
         </div>
-        <div class="col">5 Cups</div>
-        <div class="row1">
-          <div class="col">
-            <div>No.3:</div>
-            1s
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            2s
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            3s
+        <div class="col">
+          <h2>1 Minute</h2>
+          <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">4</div>
+            <div class="col">5</div>
           </div>
         </div>
-        <div class="col">Challenge</div>
-        <div class="row1">
-          <div class="col">
-            <div>No.1:</div>
-            7s
+        <div class="col">
+          <h2>5 Cups</h2>
+          <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">4</div>
+            <div class="col">5</div>
           </div>
-          <div class="col">
-            <div>No.2:</div>
-            8s
-          </div>
-          <div class="col">
-            <div>No.3:</div>
-            9s
+        </div>
+        <div class="col">
+          <h2>Challenge</h2>
+          <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">4</div>
+            <div class="col">5</div>
           </div>
         </div>
       </div>
     </div>
-    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
