--- a/rank.html
+++ b/rank.html
@@ -4,18 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="style.css" />
     <title>Rank</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -31,17 +19,17 @@
       style="display: flex; justify-content: space-evenly"
     >
       <div class="table-row">
-        <div>Rank</div>
-        <div>No:1</div>
-        <div>No:2</div>
-        <div>No:3</div>
-        <div>No:4</div>
-        <div>No:5</div>
-        <div>No:6</div>
-        <div>No:7</div>
-        <div>No:8</div>
-        <div>No:9</div>
-        <div>No:10</div>
+        <div>No.</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
       </div>
       <div class="table-row">
         <div>1 Minute</div>
@@ -57,7 +45,7 @@
         <div>10</div>
       </div>
       <div class="table-row">
-      <div>5 Cup</div>
+      <div>5 Cups</div>
       <div>1</div>
         <div>2</div>
         <div>3</div>
@@ -82,5 +70,15 @@
         <div>9</div>
         <div>10</div>
     </div>
+    <script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
