update the folder structure

--- a/frontend_server/index.html
+++ b/frontend_server/index.html
@@ -2,28 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webxr Ar</title>
+    <title>Main</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- <script type="module" src="/cube/normal-cube.js"></script> -->
-    <!-- <script type="module" src="/cube/xr-cube.js"></script> -->
-    <!-- <script type="module" src="/cube/xr-hit-cube.js"></script> -->
-    <button id="play">Play</button>
-    <script type="module" src="/model/xr-hit-models.js"></script>
-    <!-- <script type="module" src="/model/animate.js"></script> -->
-    <!-- <script type="module" src="xr-domOverlay.js"></script> -->
-    <!-- 
-    <div id="overlay-content">
-      <div id="container">
-        <label for="model-select">Choose Model</label>
-        <select id="model-select">
-          <option value="play">play</option>
-          <option value="parse">parse</option>
-        </select>
-      </div>
-    </div> -->
-    <!-- Comment style display none for dom overlay to work in style.css file -->
+    <picture>The cup</picture>
+    <h1>Game mode:</h1>
+    <div class="btn-row">
+      <button class="btn btn-outline-light">1 Minute</button>
+      <button class="btn btn-outline-light">5 Cup</button>
+      <button class="btn btn-outline-light">Challenge</button>
+      <button class="btn btn-outline-light">Practive</button>
+    </div>
+    <h1>
+      <a href="rank.html"
+        ><button class="btn btn-outline-light">Rank</button></a
+      >
+    </h1>
+    <h1>
+      <a href="aboutUs.html"
+        ><button class="btn btn-outline-light">About</button></a
+      >
+    </h1>
   </body>
 </html>
