--- a/frontend_server/public/aboutUs.html
+++ b/frontend_server/public/aboutUs.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="main.html"
+    <a href="index.html"
       ><button class="btn btn-outline-light" style="float: right">
         Back
       </button></a
