--- a/frontend_server/public/rank.html
+++ b/frontend_server/public/rank.html
@@ -9,8 +9,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <b sody>
-    <a href="main.html"
+  <body>
+    <a href="index.html"
       ><button class="btn btn-outline-light" style="float: right">
         Back
       </button></a
