--- a/frontend_server/public/rank.html
+++ b/frontend_server/public/rank.html
@@ -35,7 +35,7 @@
       </div>
       <div class="table-row">
         <div>1 Minute</div>
-        <div>1</div>
+        <div>marcus</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
@@ -48,7 +48,7 @@
       </div>
       <div class="table-row">
       <div>5 Cups</div>
-      <div>1</div>
+        <div>marcus</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
@@ -61,7 +61,7 @@
       </div>
       <div class="table-row" >
       <div>Challenge</div>
-      <div>1</div>
+        <div>marcus</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
