--- a/frontend_server/index.html
+++ b/frontend_server/index.html
@@ -26,13 +26,13 @@
         ><button class="btn btn-outline-light">1 Minute</button></a
       >
       <a href="./public/main.html"
-        ><button class="btn btn-outline-light">5 Cup</button></a
+        ><button class="btn btn-outline-light">5 Cups</button></a
       >
       <a href="./public/main.html"
         ><button class="btn btn-outline-light">Challenge</button></a
       >
       <a href="./public/main.html"
-        ><button class="btn btn-outline-light">Practive</button></a
+        ><button class="btn btn-outline-light">Practice</button></a
       >
     </div>
     <h1>
