delete model folder

--- a/frontend_server/public/main.html
+++ b/frontend_server/public/main.html
@@ -28,8 +28,7 @@
     <!-- <script type="module" src="/cube/xr-cube.js"></script> -->
     <!-- <script type="module" src="/cube/xr-hit-cube.js"></script> -->
     <button class="btn btn-outline-light" id="play">Play</button>
-    <script type="module" src="/model/xr-hit-models.js"></script>
-    <!-- <script type="module" src="/model/animate.js"></script> -->
+    <script type="module" src="../xr-hit-models.js"></script>
     <!-- <script type="module" src="xr-domOverlay.js"></script> -->
     <!-- 
     <div id="overlay-content">
