--- a/frontend_server/index.html
+++ b/frontend_server/index.html
@@ -41,7 +41,7 @@
       >
     </h1>
     <h1>
-      <a href="aboutUs.html"
+      <a href="about.html"
         ><button class="btn btn-outline-light">About</button></a
       >
     </h1>
