--- a/frontend_server/public/about.html
+++ b/frontend_server/public/about.html
@@ -28,12 +28,15 @@
     <h2>(How to play)</h2>
     <div class="about">
       <div>Mode 1 (1 Minute)</div>
-      <p>.........</p>
+      <p>
+        Your goal is to push over as many wineglasses as possible within one
+        minute.
+      </p>
       <div>Mode 2 (5 cup)</div>
-      <p>.........</p>
+      <p>Your goal is to push over five wineglasses as quickly as possible.</p>
       <div>Mode 3 (Challenge)</div>
       <p>.........</p>
-      <div>Mode 4 (Practive)</div>
+      <div>Mode 4 (Practice)</div>
       <p>.........</p>
       <h3>Presented by:</h3>
       <div>Tevin / Marcus / Kasey</div>
