--- a/frontend_server/public/about.html
+++ b/frontend_server/public/about.html
@@ -27,21 +27,21 @@
     <h1>About</h1>
     <h2>(How to play)</h2>
     <div class="about">
-      <div>Mode 1 (1 Minute)</div>
+      <h3>Mode 1 (1 Minute)</h3>
       <p>
         Your goal is to push over as many wineglasses as possible within one
         minute.
       </p>
-      <div>Mode 2 (5 cup)</div>
+      <h3>Mode 2 (5 cup)</h3>
       <p>Your goal is to push over five wineglasses as quickly as possible.</p>
-      <div>Mode 3 (Challenge)</div>
+      <h3>Mode 3 (Challenge)</h3>
       <p>.........</p>
       <div>Mode 4 (Practice)</div>
       <p>.........</p>
       <h3>Presented by:</h3>
-      <div>Tevin / Marcus / Kasey</div>
+      <p>Tevin / Marcus / Kasey</p>
       <h3>Special thanks:</h3>
-      <div>Beeno / Janice / Tecky</div>
+      <p>Beeno / Janice / Tecky</p>
     </div>
   </body>
 </html>
