--- a/frontend_server/public/about.html
+++ b/frontend_server/public/about.html
@@ -35,9 +35,9 @@
       <h3>Mode 2 (5 cup)</h3>
       <p>Your goal is to push over five wineglasses as quickly as possible.</p>
       <h3>Mode 3 (Challenge)</h3>
-      <p>.........</p>
+      <p>Communicate with your friend.</p>
       <div>Mode 4 (Practice)</div>
-      <p>.........</p>
+      <p>Just practice...</p>
       <h3>Presented by:</h3>
       <p>Tevin / Marcus / Kasey</p>
       <h3>Special thanks:</h3>
