--- a/frontend_server/public/main.html
+++ b/frontend_server/public/main.html
@@ -22,7 +22,12 @@
     <!-- <script type="module" src="/cube/xr-cube.js"></script> -->
     <!-- <script type="module" src="/cube/xr-hit-cube.js"></script> -->
     <button class="btn btn-outline-light" id="play">Play</button>
+    <div class="timer-container">
+      <div id="timer">00:59</div>
+    </div>
+    <button onclick="countdownTimer()">start</button>
     <script type="module" src="../xr-hit-models.js"></script>
+    <script src="js/timer.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
