--- a/frontend_server/public/rank.html
+++ b/frontend_server/public/rank.html
@@ -35,31 +35,29 @@
       </div>
       <div class="table-row">
         <div>1 Minute</div>
-        <div>marcus</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
+        <div>99cups (marcus)</div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
       <div class="table-row">
       <div>5 Cups</div>
-        <div>marcus</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
+        <div>5s (marcus)</div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
-      <div class="table-row" >
+      <!-- <div class="table-row" >
       <div>Challenge</div>
         <div>marcus</div>
         <div>2</div>
@@ -71,7 +69,7 @@
         <div>8</div>
         <div>9</div>
         <div>10</div>
-    </div>
+    </div> -->
 
   </body>
 </html>
