--- a/frontend_server/public/main.html
+++ b/frontend_server/public/main.html
@@ -23,13 +23,9 @@
         Back
       </button></a
     >
-    <button class="btn btn-outline-light" id="play">Play</button>
-    <button class="btn btn-outline-light" id="load">Load</button>
-    <button class="btn btn-outline-light" id="remove">remove</button>
-    <!-- <div class="timer-container">
-      <div id="timer">01:00:000</div>
-    </div>
-    <button onclick="countdownTimer()">start</button> -->
+    <div class="timer-container" id="timer">01:00:000</div>
+    <button class="btn btn-outline-light" id="counterSpan">0</button>
+    <!-- <button onclick="countdownTimer()">start</button> -->
     <script src="/public/js/timer.js"></script>
     <!-- <script type="module" src="../cube/normal-cube.js"></script> -->
     <!-- <script type="module" src="../cube/xr-cube.js"></script> -->
