--- a/frontend_server/public/main.html
+++ b/frontend_server/public/main.html
@@ -25,6 +25,8 @@
     >
     <div class="timer-container" id="timer">01:00:000</div>
     <button class="btn btn-outline-light" id="counterSpan">0</button>
+    <button class="btn btn-outline-light" id="play">play</button>
+    <button class="btn btn-outline-light" id="create">create</button>
     <!-- <button onclick="countdownTimer()">start</button> -->
     <script src="/public/js/timer.js"></script>
     <!-- <script type="module" src="../cube/normal-cube.js"></script> -->
