update the css and all html and +index_model.js

--- a/frontend_server/index.html
+++ b/frontend_server/index.html
@@ -20,7 +20,8 @@
   </head>
   <body>
     <picture>The cup</picture>
-    <h1>Game mode:</h1>
+    <script type="module" src="/public/js/xr-cube.js"></script>
+    <h1>Game mode</h1>
     <div class="btn-row">
       <a href="./public/main.html"
         ><button class="btn btn-outline-light">1 Minute</button></a
@@ -45,5 +46,6 @@
         ><button class="btn btn-outline-light">About</button></a
       >
     </h1>
+    <script type="module" src="/public/js/index_model.js"></script>
   </body>
 </html>
