combine frontend_server and backend_server into node_server

--- a/node_server/public/main.html
+++ b/node_server/public/main.html
@@ -28,13 +28,13 @@
     <button class="btn btn-outline-light" id="play">play</button>
     <button class="btn btn-outline-light" id="create">create</button>
     <!-- <button onclick="countdownTimer()">start</button> -->
-    <script src="/public/js/timer.js"></script>
+    <script src="/js/timer.js"></script>
     <!-- <script type="module" src="../cube/normal-cube.js"></script> -->
     <!-- <script type="module" src="../cube/xr-cube.js"></script> -->
     <!-- <script type="module" src="../cube/xr-hit-cube.js"></script> -->
     <!-- <script type="module" src="xr-domOverlay.js"></script> -->
-    <script type="module" src="/public/js/xr-hit-models.js"></script>
-    <!-- <script type="module" src="/public/js/xr-hit-models_test.js"></script> -->
+    <script type="module" src="/js/xr-hit-models.js"></script>
+    <!-- <script type="module" src="/js/xr-hit-models_test.js"></script> -->
     <!-- 
     <div id="overlay-content">
       <div id="container">
