--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -40,19 +40,30 @@
   </head>
   <body>
     <picture>The cup</picture>
-    <script type="module" src="/public/js/xr-cube.js"></script>
+    <script
+      async
+      src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"
+    ></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.147.0/build/three.module.js"
+        }
+      }
+    </script>
+    <script type="module" src="/js/index_model.js"></script>
     <h1>Game mode</h1>
     <div class="btn-row">
-      <a href="./public/main.html"
+      <a href="/main.html"
         ><button class="btn btn-outline-light">1 Minute</button></a
       >
-      <a href="./public/main.html"
+      <a href="/main.html"
         ><button class="btn btn-outline-light">5 Cups</button></a
       >
-      <a href="./public/main.html"
+      <a href="/main.html"
         ><button class="btn btn-outline-light">Challenge</button></a
       >
-      <a href="./public/main.html"
+      <a href="/main.html"
         ><button class="btn btn-outline-light">Practice</button></a
       >
     </div>
