--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -51,6 +51,7 @@
         }
       }
     </script>
+    <div id="measureSize"></div>
     <script type="module" src="/js/index_model.js"></script>
     <h1>Game mode</h1>
     <div class="btn-row">
