--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -53,6 +53,7 @@
     </script>
     <div id="measureSize"></div>
     <script type="module" src="/js/index_model.js"></script>
+    <h1>Pretty Pitied Bitch 珍音功</h1>
     <h1>Game mode</h1>
     <div class="btn-row">
       <a href="/main.html"
