--- a/node_server/public/about.html
+++ b/node_server/public/about.html
@@ -41,12 +41,9 @@
     <h2>(How to play)</h2>
     <div class="about">
       <h3>Mode 1 (1 Minute)</h3>
-      <p>
-        Your goal is to push over as many wineglasses as possible within one
-        minute.
-      </p>
+      <p>Push over as many wineglasses as possible within one minute.</p>
       <h3>Mode 2 (5 cup)</h3>
-      <p>Your goal is to push over five wineglasses as quickly as possible.</p>
+      <p>Push over five wineglasses as quickly as possible.</p>
       <h3>Mode 3 (Challenge)</h3>
       <p>Communicate with your friend.</p>
       <div>Mode 4 (Practice)</div>
