--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -4,42 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main</title>
-    <style>
-      #rankDialog {
-        position: fixed;
-        inset: 50%;
-        width: 1px;
-        height: 1px;
-        transition: all 0.5s;
-        overflow: hidden;
-        padding: 0;
-      }
-      #rankDialog.open {
-        inset: 0;
-        width: 100%;
-        height: 100%;
-      }
-      #rankIFrame {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
+    <title>Main</title>
+  </head>
+  <style>
+    #rankDialog {
+      position: fixed;
+      inset: 50%;
+      width: 1px;
+      height: 1px;
+      transition: all 0.5s;
+      overflow: hidden;
+      padding: 0;
+    }
+    #rankDialog.open {
+      inset: 0;
+      width: 100%;
+      height: 100%;
+    }
+    #rankIFrame {
+      width: 100%;
+      height: 100%;
+    }
+    #close-btn {
+      z-index: 1 !important;
+    }
+  </style>
+  <body>
+    <picture>The cup</picture>
+
+    <div id="measureSize"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <picture>The cup</picture>
     <script
       async
       src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"
@@ -51,7 +56,6 @@
         }
       }
     </script>
-    <div id="measureSize"></div>
     <script type="module" src="/js/index_model.js"></script>
     <h1>
       <p>珍音功</p>
@@ -75,7 +79,7 @@
     <h1>
       <button class="btn btn-outline-light" onclick="showRank()">Rank</button>
       <dialog id="rankDialog">
-        <button onclick="hideRank()">close</button>
+        <button id="close-btn" onclick="hideRank()">close</button>
         <br />
         <iframe style="border: 0" id="rankIFrame"></iframe>
       </dialog>
@@ -85,12 +89,15 @@
         ><button class="btn btn-outline-light">About</button></a
       >
     </h1>
+
     <script>
       function hideRank() {
+        console.log("hidden rank");
         rankDialog.classList.remove("open");
-        setTimeout(() => {
-          rankDialog.open = false;
-        }, 500);
+        rankDialog.open = false;
+        // setTimeout(() => {
+        //   rankDialog.open = false;
+        // }, 500);
       }
       function showRank() {
         rankDialog.open = true;
