--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Bungee+Spice&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Main</title>
   </head>
@@ -37,8 +43,6 @@
     }
   </style>
   <body>
-    <picture>The cup</picture>
-
     <div id="measureSize"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -58,8 +62,8 @@
     </script>
     <script type="module" src="/js/index_model.js"></script>
     <h1>
-      <p>珍音功</p>
-      <p>Pretty Pitied Bitch</p>
+      <p id="index_h1">珍音功</p>
+      <p id="index_h1">Pretty Pitied Bitch</p>
     </h1>
     <h1>Game mode</h1>
     <div class="btn-row">
